--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 
 body{
     background: #4cb0b9;
-    font-family: helvetica, arial, sans-serif;
+    font-family: Palatino, helvetica, arial, sans-serif;
 }
 
 main{
@@ -18,10 +18,15 @@ main{
     background: #fff;
     color: #222;
     width: 100%;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 30px;
     height: auto;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
+    border-radius: 10px
+}
+
+img{
+    vertical-align: bottom;
 }
