--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ main{
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
-    border-radius: 10px
+    border-radius: 10px;
     border:2px solid purple;
 }
 
