--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ main{
     box-sizing: border-box;
     text-align: center;
     border-radius: 10px;
-    border:2px solid purple;
+    border:2px solid orange;
 }
 
 img{
