--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ img{
     vertical-align: bottom;
 }
 
-#update{
+#update,
+#otherUpdate{
     display: none;
     position: fixed;
     bottom:0;
@@ -47,6 +48,7 @@ img{
     box-sizing: border-box;
 }
 
-#update.on{
+#update.on,
+#otherUpdate.on{
     display: block;
 }
