--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ main{
 }
 
 .intro{
-    background: #fff;
-    color: #222;
+    background: #222;
+    color: #fff;
     width: 100%;
     font-size: 25px;
     line-height: 30px;
@@ -27,7 +27,7 @@ main{
     box-sizing: border-box;
     text-align: center;
     border-radius: 10px;
-    border:2px solid pink;
+    border:2px solid #fff;
 }
 
 img{
