--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@
         color: #fff; */
         background: #eee;
         background: linear-gradient(to bottom, #ccc, #fff);
-        border-radius: 200px 200px 0 0 / 50px 50px 0 0;
+/*        border-radius: 200px 200px 0 0 / 50px 50px 0 0;*/
+        border-radius: 50px 50px 0 0;
     }
 
     .window .header #update,
@@ -132,7 +133,7 @@
         width: 100%;
         height: 140px;
         padding-top:40px;
-        border-radius: 0 0 500px 500px / 0 0 150px 150px;
+/*        border-radius: 0 0 500px 500px / 0 0 150px 150px;*/
         background: linear-gradient(0deg, #489bee, #07e7e7);
         position: relative;
         z-index: 2;
